# HeavenFox

./: .gitignore  123.txt  456.txt  AUTHORS  CMakeLists.txt  COPYING  Makefile  README.md  work.code-workspace
application/: Makefile
arch/arm/: Makefile  cpu_ramboot.lds  gardens-link.lds
arch/arm/cpu/: Makefile
arch/arm/kernel/: Makefile  context.S  head-common.S  head.S
arch/arm/lib/: Makefile  crt0.S  exception.c  interrupt.c  lib1funcs.S  vectors.S
arch/arm64/: Makefile
board/: Makefile
board/mach-imx6ull/: Makefile  board_init.c  imx6_common.h  imx6_console.c  imx6_gadget.c  imx6_led.c  imx6_sdmmc.c  imx6_systick.c  imx_common.c
board/mach-xc7z010/: Makefile  board_init.c  zynq7_common.c  zynq7_common.h  zynq7_console.c  zynq7_led.c  zynq7_sdmmc.c
board/mach-xc7z010/hw_platform_0/: ps7_init.c  ps7_init.h  ps7_init.html  ps7_init.tcl  ps7_init_gpl.c  ps7_init_gpl.h  system.hdf  zynq_wrapper.bit
boot/: Makefile  board_f.c  board_r.c  gardens.elf  gardens.img  real-kernel.elf  real-kernel.img  real-kernel.lds
boot/device-tree/: Makefile
boot/device-tree/dt-bindings/: arm-gic.h
boot/device-tree/imx6ul/: Makefile  firmware-bak.dtb  firmware.dtb  imx6ull.dtsi  imx6ull_gardens.dts  imx6ull_rain_topeet_emmc.dts
boot/device-tree/imx6ull/: Makefile  imx6ull.dtsi  imx6ull_topeet.dts
boot/device-tree/xc7z010/: Makefile  pcw.dtsi  pl.dtsi  system-conf.dtsi  system-top.dts
boot/dynamic/: Makefile  implicit_call.c
common/: Makefile
common/generic/: Makefile  api_string.c  errors.c  generic.c  io_stream.c  radix_tree.c  time.c  trie_tree.c
common/mempool/: Makefile  mem_malloc.c  mem_simple.c
configs/: autoconf.h  configs.h  mach_configs.h
configs/mach/: am4378_myir_config.h  imx6ull_toppet_config.h  imx6ull_toppet_defconfig  zynq7_microphase_config.h  zynq7_microphase_defconfig
document/: Gardens System.docx  HavenFox OS.docx  real-kernel.docx
drivers/: Makefile
drivers/base/: Makefile  chardev.c  fbmem.c  kobjmap.c  sysfs.c
drivers/clk/: Makefile  imx-clks.c  zynq7-clks.c
drivers/gpio/: Makefile  imx-gpiochip.c  led_gpio.c  led_template.c
drivers/i2c/: Makefile  ap3216c.c  at24cxx.c  imx-i2c.c  tsc2007.c
drivers/input/: Makefile
drivers/input/key/: Makefile  extkey.c
drivers/pinctrl/: Makefile  imx-iomuxc.c
drivers/usb/: Makefile
drivers/usb/gadget/: Makefile  fsl_mouse.c
drivers/video/: Makefile  fbdev-imx.c  imx-fbdev.c
example/: Makefile  button_app.c  display_app.c  env_monitor.c  light_app.c  thread_table.c  thread_table.h  tsc_app.c
include/board/: board.h  board_common.h  board_config.h
include/boot/: board_init.h  boot_text.h  implicit_call.h
include/common/: api_string.h  atomic_types.h  basic_types.h  error_types.h  generic.h  io_stream.h  linkage.h  list_types.h  mem_manage.h  radix_tree.h  time.h  trie_tree.h
include/kernel/: context.h  instance.h  kernel.h  mailbox.h  mutex.h  sched.h  semaphore.h  signal.h  sleep.h  spinlock.h  thread.h  wait.h  workqueue.h
include/platform/: fwk_basic.h  fwk_cdev.h  fwk_chrdev.h  fwk_fcntl.h  fwk_fs.h  fwk_gpiodesc.h  fwk_inode.h  fwk_kobj.h  fwk_mempool.h  fwk_pinctrl.h  fwk_platdev.h  fwk_platdrv.h  fwk_platform.h  fwk_pm.h  fwk_uaccess.h  hal_basic.h  hal_cdev.h  hal_chrdev.h  hal_fcntl.h  hal_fs.h  hal_gpiodesc.h  hal_inode.h  hal_kobj.h  hal_platdev.h  hal_platdrv.h  hal_platform.h  hal_uaccess.h  kmem_pool.h
include/platform/clk/: fwk_clk.h  fwk_clk_gate.h  fwk_clk_provider.h
include/platform/gpio/: fwk_gpiochip.h  fwk_gpiodesc.h
include/platform/i2c/: fwk_eeprom.h  fwk_i2c_algo.h  fwk_i2c_core.h  fwk_i2c_dev.h  hal_i2c_algo.h  hal_i2c_core.h  hal_i2c_dev.h
include/platform/input/: fwk_input.h
include/platform/irq/: fwk_irq.h  fwk_irq_chip.h  fwk_irq_domain.h  fwk_irq_types.h  hal_irq.h  hal_irq_domain.h  hal_irq_types.h
include/platform/mmc/: fwk_sdcard.h  fwk_sdfatfs.h  hal_sdcard.h  hal_sdfatfs.h
include/platform/net/: fwk_ether.h  fwk_if.h  fwk_ip.h  fwk_netdev.h  hal_if.h  (+5 more)
include/rootfs/: rfs_disk.h
init/: Makefile  main.c
kernel/: Makefile  mailbox.c  mutex.c  sched.c  semaphore.c  sleep.c  spinlock.c  thread.c  wait.c  workqueue.c
kernel/kthread/: Makefile  idle.c  init_proc.c  kthread.c  kworker.c
objects/boot/: board_f.o.d  board_r.o.d
objects/example/: display_app.o.d  light_app.o.d  thread_table.o.d
objects/init/: main.o.d
objects/kernel/: mutex.o.d  sched.o.d  sleep.o.d  spinlock.o.d  thread.o.d
objects/platform/: fwk_fcntl.o.d  fwk_fs.o.d  fwk_inode.o.d  fwk_kobj.o.d  fwk_uaccess.o.d
platform/: Makefile  fwk_fcntl.c  fwk_fs.c  fwk_inode.c  fwk_kobj.c  fwk_kobject.c  fwk_kobjmap.c  fwk_uaccess.c  hal_fcntl.c  hal_fs.c  hal_inode.c  hal_kobj.c  hal_uaccess.c
platform/blk_device/: Makefile
platform/block_device/: Makefile
platform/bus_type/: Makefile  fwk_platdev.c  fwk_platdrv.c  fwk_platform.c  hal_platdev.c  hal_platdrv.c  hal_platform.c
platform/chardev/: Makefile  fwk_cdev.c  fwk_chrdev.c  hal_cdev.c  hal_chrdev.c
platform/clk/: Makefile  fwk_clk.c  fwk_clk_gate.c  fwk_clk_provider.c
platform/framebuffer/: Makefile  fwk_ascii.c  fwk_bitmap.c  fwk_disp.c  fwk_fbmem.c  hal_ascii.c  hal_bitmap.c  hal_fbmem.c
platform/gpio/: Makefile  fwk_gpiochip.c  fwk_gpiodesc.c
platform/gpio_desc/: Makefile  fwk_gpiodesc.c  hal_gpiodesc.c
platform/i2c/: Makefile  fwk_i2c.c
platform/irq/: Makefile  fwk_irq.c  fwk_irq_chip.c  fwk_irq_desc.c  fwk_irq_domain.c  fwk_irq_types.c  hal_irq.c  hal_irq_desc.c  hal_irq_domain.c  hal_irq_types.c
platform/mem/: Makefile  fwk_mempool.c  kmem_pool.c
platform/mmc/: Makefile  fwk_sdcard.c  fwk_sdfatfs.c  hal_sdcard.c  hal_sdfatfs.c
platform/net_device/: Makefile  fwk_netdev.c  hal_netdev.c
platform/of/: Makefile  fwk_of.c  fwk_of_device.c  fwk_of_prop.c  hal_of.c  hal_of_device.c  hal_of_prop.c
platform/pinctrl/: Makefile  fwk_pinconf.c  fwk_pinctrl.c  fwk_pinmux.c
platform/usb/: Makefile  fwk_usb.c  hal_usb.c
rootfs/: Makefile
rootfs/fatfs/: Makefile  diskio.c  diskio.h  ff.c  rfs_fatfs.c
scripts/: Makefile.build
scripts/dtc/: dtc
scripts/jlink/: jlink.sh
(+122 files in other folders)
